2258 [Job] improved aborting of Jobs
2256 [AVS Script Creator] fixed a slight rounding error in the aspect error calculation
2255 [AVS Script Creator] resize is enabled by default in the profiles (only for new profiles)
     [AVS Script Creator] suggest resolution is automatically pre-selected when doing a resize
     [AVS Script Creator] DAR changes also triggers a recalc of the "Aspect Ratio Error"
     [AVS Script Creator] avoid upsizing (if disallowed) when "Clever (TM) anamorphic encoding" is used
     [AVS Script Creator] some minor cosmetics / changes
2254 [Update] fixed a crash if the proxy has been enabled without server address
2253 [Queue] warn if intermediate files of an incomplete job are going to be deleted
2252 [Worker] if a job is aborted the corresponding worker will be stopped
2251 [OneClick] pgcdemux will only be used if more than one PGC is found
2250 [AVS Script Creator] avoid upsizing when resizing a cropped source
     [AVS Script Creator] added option to enable upsizing in the profile (disabled by default)
     [AVS Script Creator] added option to select the default mod value in the profile (mod16 by default)
     [AVS Script Creator] adjusted "Clever (TM) anamorphic encoding" so the new mod values are used
     [OneClick] obey the new AVS Script Creator settings
2249 [HD Streams Extractor] fixed handling of seamless branching EVO files
2248 [OneClick] warn if identical tracks are about to be processed
2247 [AVS Script Creator] hide "Aspect Ratio Error" when doing an anamorphic encoding
                          fixed handling of the "Aspect Ratio Error" if dealing with an anamorphic input file
2246 [AVS Script Creator] enhanced readability of the "red parts"
                          the "Aspect Ratio Error" only turns red if the value is bigger than the acceptable aspect error
                          crop values will be used also for the upsize warnings
2245 [Queue] related jobs are highlighted when selecting a job